# lila-chat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Rocket.toml  message.zsh
frontend/: chat.css  chat.html  chat.js  index.css  index.html  loginchange.html  loginchange.js  logout.js  register.html  register.js  stream.css  updateinfo.js
frontend/css/: index.css  style.css
frontend/html/: chat.html  login.html  register.html  updateinfo.html
frontend/js/: chat.js  login.js  logout.js  register.js  updateinfo.js
src/: auth.rs  chat.rs  file_io.rs  main.rs  message.rs  user.rs
