[package]
name = "pogchat"
version = "0.5.2"
authors = ["Erin Nova <erin@the-system.eu.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.10", features = ["private-cookies"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.6.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
log = "0.4.0"
env_logger = "0.8.4"
chrono = { version = "0.4.11", features = ["serde"] }
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json", "serve"] }
once_cell = "1.8.0"
random-string = "1.0"
sled = "0.34.6"
bincode = "1.3.3"
